# cryptonotewallet

./: .gitignore  .gitmodules  .qmake.stash  .travis.yml  AllowReorg.bat  BMoreCoin.pro  BMoreCoinWallet.nsi  BasicPanel_qml.cpp  CMakeLists.txt  COPYING  CryptoNoteWallet.cmake  ISSUE_TEMPLATE.md  Info.plist  IntenseConfig.js  IntenseConfig_js.cpp  LeftPanel.qml  LeftPanel_qml.cpp  Makefile  MiddlePanel.qml  MiddlePanel_qml.cpp  NodeAdapter.cpp  Portable.bat  QREncode.cmake  README.md  ReleaseNotes.txt  RightPanel.qml  RightPanel_qml.cpp  Settings.cpp  Settings.h  WindowsInstall.nsi  bmorecoin.pro  build.sh  build_libwallet_api.sh  cn_version.cmake  components_AddressBookTable_qml.cpp  components_CheckBox_qml.cpp  components_DaemonConsole_qml.cpp  components_DaemonManagerDialog_qml.cpp  components_DashboardTable_qml.cpp  components_DatePicker_qml.cpp  (+97 more)
.github/workflows/: appimage.yml  check.yml  codeql-analysis.yml  macOS.yml  release.yml  ubuntu18.yml  ubuntu20.yml  windows.yml
Platform/Linux/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
Platform/OSX/: ApplicationEventHandler.h  ApplicationEventHandler.mm  INotificationMonitorObserver.h  NotificationMonitor.h  NotificationMonitor.mm  WalletApplication.mm
Platform/Windows/: ApplicationEventHandler.cpp  ApplicationEventHandler.h
appimage/: bmorecoin-desktop.desktop  create-appimage.sh
ci/: macos.10.12.sh  macos.10.13.sh  run.sh  ubuntu.16.04.x86_64.sh  windows.10.x86.sh  windows.10.x86_64.sh
ci/package-artifacts/: CHANGELOG.txt  README.txt  ha_credit.http  ha_err_badid.http  ha_err_connect.http  ha_err_nopayment.http  ha_err_overlimit.http  ha_info.http
components/: DaemonConsole.qml  DaemonManagerDialog.qml  DatePicker.qml  HistoryTable.qml  IntenseHeader.qml  IntenseTable.qml  LineEdit.qml  Notifier.qml  PasswordDialog.qml  PrivacyLevel.qml  PrivacyLevelSmall.qml  ProgressBar.qml  StandardDialog.qml  TableHeader.qml  TipItem.qml  TitleBar.qml
images/: appicon.icns
include/: IAddressBookManager.h  IApplicationEventHandler.h  IBlockChainExplorerAdapter.h  ICryptoNoteAdapter.h  IDonationManager.h  IMinerWorker.h  IMiningManager.h  INewsReader.h  INodeAdapter.h  IOptimizationManager.h  IPoolClient.h  IPoolMiner.h  IWalletAdapter.h
installers/windows/: Monero.iss
intense/: .travis.yml  Dockerfile  README.md
intense-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  monero.cbp
intense-build/contrib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
intense-build/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
intense/ci/: macos.10.12.sh  macos.10.13.sh  run.sh  ubuntu.16.04.x86_64.sh  windows.10.x86.sh  windows.10.x86_64.sh
intense/src/: CMakeLists.txt  cryptonote_config.h  version.h.in
intense/src/legacy/: BinaryInputStreamSerializer.cpp  BinaryInputStreamSerializer.h  BinaryOutputStreamSerializer.cpp  BinaryOutputStreamSerializer.h  CMakeLists.txt  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h  IInputStream.h  ISerializer.h  JsonInputStreamSerializer.cpp  JsonInputStreamSerializer.h  JsonInputValueSerializer.cpp  JsonInputValueSerializer.h  JsonOutputStreamSerializer.cpp  JsonOutputStreamSerializer.h  KVBinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.h  KVBinaryOutputStreamSerializer.cpp  KVBinaryOutputStreamSerializer.h  KeysStorage.cpp  KeysStorage.h  MemoryStream.h  SerializationOverloads.cpp  StdInputStream.cpp  StdInputStream.h  StringView.cpp  StringView.h
macos/: CustomInfo.plist
pages/: AddressBook.qml  Dashboard.qml  History.qml  Intense.qml  Intense.qml.autosave  IntenseDash.qml  IntenseDashboard.qml  Mining.qml  Receive.qml  Settings.qml  Sign.qml  Transfer.qml  TxKey.qml
src/: AddressProvider.cpp  AddressProvider.h  AliasProvider.cpp  AliasProvider.h  CommandLineParser.cpp  CommandLineParser.h  CryptoNote.cpp  CryptoNote.h  CryptoNoteWalletConfig.h.in  CryptoNoteWrapper.cpp  CryptoNoteWrapper.h  CurrencyAdapter.cpp  CurrencyAdapter.h  DnsLookup.cpp  DnsLookup.h  Info.plist.in  Languages.pro  LogFileWatcher.cpp  LogFileWatcher.h  LoggerAdapter.cpp  LoggerAdapter.h  Miner.cpp  Miner.h  NodeAdapter.cpp  NodeAdapter.h  OptimizationManager.cpp  OptimizationManager.h  PaymentServer.cpp  PaymentServer.h  Settings.cpp  Settings.cpp.autosave  Settings.h  SignalHandler.cpp  SignalHandler.h  StratumClient.cpp  StratumClient.h  TranslatorManager.cpp  TranslatorManager.h  Update.cpp  Update.h  (+21 more)
src/Application/: AddressBookManager.cpp  AddressBookManager.h  BlogReader.cpp  BlogReader.h  CommandLineParser.cpp  CommandLineParser.h  IWalletUiItem.h  LogFileWatcher.cpp  LogFileWatcher.h  MiningManager.cpp  MiningManager.h  OptimizationManager.cpp  OptimizationManager.h  SignalHandler.cpp  SignalHandler.h  WalletApplication.cpp  WalletApplication.h  WalletSplashScreen.cpp  WalletSplashScreen.h
src/CryptoNoteWrapper/: BlockChainExplorerAdapter.cpp  BlockChainExplorerAdapter.h  BlockChainExplorerWorker.cpp  BlockChainExplorerWorker.h  CommonNodeAdapter.cpp  CommonNodeAdapter.h  CryptoNoteAdapter.cpp  CryptoNoteAdapter.h  GuardExecutor.cpp  GuardExecutor.h  InProcessNodeAdapter.cpp  InProcessNodeAdapter.h  InProcessNodeWorker.cpp  InProcessNodeWorker.h  ProxyRpcNodeAdapter.cpp  ProxyRpcNodeAdapter.h  ProxyRpcNodeWorker.cpp  ProxyRpcNodeWorker.h  SemaphoreUtils.cpp  SemaphoreUtils.h  WalletGreenAdapter.cpp  WalletGreenAdapter.h  WalletGreenWorker.cpp  WalletGreenWorker.h
src/Miner/: Miner.cpp  Miner.h  StratumClient.cpp  StratumClient.h  Worker.cpp  Worker.h
src/Models/: AddressBookModel.cpp  (+21 more)
translations/: monero-core.ts  monero-core_ar.ts  monero-core_de.ts  monero-core_eo.ts  monero-core_es.ts  monero-core_fi.ts  monero-core_fr.ts  monero-core_he.ts  monero-core_hi.ts  monero-core_hr.ts  monero-core_id.ts  monero-core_it.ts  monero-core_ja.ts  monero-core_ko.ts  monero-core_nl.ts  monero-core_pl.ts  monero-core_pt-br.ts  monero-core_ro.ts  monero-core_ru.ts  monero-core_sv.ts  monero-core_zh-cn.ts  monero-core_zh-tw.ts
wizard/: WizardDonation.qml  WizardMain.qml  WizardManageWalletUI.qml  WizardOptions.qml  WizardWelcome.qml
(+622 files in other folders)
